added search contacts
