# docs/swagger.json
@@ -89,6 +89,53 @@
                 }
             }
         },
+        "/chat/search": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chat"
+                ],
+                "summary": "Поиск чатов пользователя и глобальных каналов по названию",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Ключевое слово для поиска",
+                        "name": "key_word",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.SearchChatsDTO"
+                        }
+                    },
+                    "400": {
+                        "description": "Некорректный запрос",
+                        "schema": {
+                            "$ref": "#/definitions/responser.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Нет полномочий",
+                        "schema": {
+                            "$ref": "#/definitions/responser.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Не удалось получить сообщения"
+                    }
+                }
+            }
+        },
         "/chat/{chatId}": {
             "get": {
                 "security": [
@@ -451,7 +498,7 @@
                 }
             }
         },
-        "/chat/{chatId}/messages/{lastMessageId}": {
+        "/chat/{chatId}/messages/pages/{lastMessageId}": {
             "get": {
                 "tags": [
                     "message"
@@ -507,7 +554,7 @@
                 }
             }
         },
-        "/chat/{chatId}/search": {
+        "/chat/{chatId}/messages/search": {
             "get": {
                 "tags": [
                     "message"
@@ -612,48 +659,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.ChatsDTO"
-                        }
-                    },
-                    "500": {
-                        "description": "Не удалось получить сообщения"
-                    }
-                }
-            }
-        },
-        "/chats/search": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "chat"
-                ],
-                "summary": "Поиск чатов пользователя и глобальных каналов по названию",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Ключевое слово для поиска",
-                        "name": "key_word",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.SearchChatsDTO"
-                        }
-                    },
-                    "400": {
-                        "description": "Некорректный запрос",
-                        "schema": {
-                            "$ref": "#/definitions/responser.ErrorResponse"
-                        }
-                    },
-                    "403": {
-                        "description": "Нет полномочий",
-                        "schema": {
-                            "$ref": "#/definitions/responser.ErrorResponse"
                         }
                     },
                     "500": {
@@ -802,6 +807,53 @@
                         "schema": {
                             "$ref": "#/definitions/responser.ErrorResponse"
                         }
+                    }
+                }
+            }
+        },
+        "/contacts/search": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "contacts"
+                ],
+                "summary": "Поиск контактов пользователя и глобальных пользователей по имени или нику",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Ключевое слово для поиска",
+                        "name": "key_word",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SearchContactsDTO"
+                        }
+                    },
+                    "400": {
+                        "description": "Некорректный запрос",
+                        "schema": {
+                            "$ref": "#/definitions/responser.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Нет полномочий",
+                        "schema": {
+                            "$ref": "#/definitions/responser.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Не удалось получить контакты"
                     }
                 }
             }
@@ -1590,6 +1642,23 @@
                 },
                 "user": {
                     "$ref": "#/definitions/models.UserDataRespDTO"
+                }
+            }
+        },
+        "models.SearchContactsDTO": {
+            "type": "object",
+            "properties": {
+                "global_users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ContactRespDTO"
+                    }
+                },
+                "user_contacts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ContactRespDTO"
+                    }
                 }
             }
         },
